# purple-facebook

./: AUTHORS  ChangeLog  README  meson.build  meson_options.txt
.githhub/workflows/: ci.yaml
.github/workflows/: main.yml
debian/: changelog  control  copyright  rules
pidgin/libpurple/: http.c
pidgin/libpurple/protocols/facebook/: Makefile  Makefile.in  api.c  api.h  data.c  facebook.c  facebook.h  http.c  http.h  marshal.c  marshal.h  util.c  util.h
